site/src/pages/_index/features/Features.module.css
.featuresContainer {
  display: flex;
  justify-content: space-evenly;
  gap: calc(var(--uitk-size-unit) * 5);
  background-color: var(--uitk-color-teal-900);
  padding-top: calc(var(--uitk-size-unit) * 6);
  padding-bottom: calc(var(--uitk-size-unit) * 6);
  padding-left: calc(var(--uitk-size-unit) * 5);
  padding-right: calc(var(--uitk-size-unit) * 3);
  max-width: 75vw;
}

.listItems {
  list-style: none;
  margin: 0;
  padding: 0;
}

.listItem {
  margin-bottom: var(--uitk-size-unit);
  display: flex;
}

.listItem > svg {
  margin-right: var(--uitk-size-unit);
}

@media screen and (max-width: 960px) {
  /* TODO: use odyssey breakpoints? */
  .featuresContainer {
    max-width: none;
    margin-top: calc(var(--uitk-size-unit) * 3);
  }
}

@media screen and (max-width: 1280px) {
  /* TODO: use odyssey breakpoints? */
  .featuresContainer {
    gap: 0;
    flex-direction: column;
  }

  .featuresContainer h2 {
    margin-bottom: calc(var(--uitk-size-unit) * 2);
  }
}

